--- a/30 - Whack A Mole/index.html
+++ b/30 - Whack A Mole/index.html
@@ -65,10 +65,10 @@
   }
 
   function startGame() {
-    scoreBoard.textContent = 0
+    scoreBoard.textContent = 0;
     timeUp = false;
     score = 0;
-    peep();
+    pop();
     setTimeout(() => timeUp = true, 10000);
   }
 
